# AdventOfCode

./: Cargo.toml  literals.txt
aoc-data/2017/1/: state.json
aoc-data/2019/17/: state.json
aoc-data/2019/18/: state.json
aoc-data/2019/19/: state.json
aoc-data/2020/1/: state.json
aoc-data/2021/1/: state.json
aoc-data/2023/1/: state.json
aoc-data/2023/2/: state.json
aoc-data/2023/3/: state.json
aoc-data/2023/4/: state.json
aoc-data/2023/5/: state.json
aoc-data/2023/6/: state.json
aoc-data/2023/7/: state.json
aoc-data/2023/8/: state.json
src/: main.rs  utils.rs
src/utils/: aocapi.rs  aocdata.rs  day.rs  misc.rs  mod.rs  puzzle.rs  puzzleanswer.rs  world.rs
src/year2017/: day1.rs
src/year2019/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  intcode.rs  mod.rs
src/year2021/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs  utils.rs
src/year2021/data/: day20testinput2.txt
src/year2023/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
