[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_plotter = "0.2.1"
glam = "0.20.1"
itertools = "0.10.1"
nom = "7.1.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
rayon = "1.5.1"
rustc-hash = "1.1.0"
