[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2018"


[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_plotter = "0.2.1"
glam = "0.20.1"
hashbrown = {version="0.11.2", features = ["rayon"]}
image = "0.23.14"
itertools = "0.10.1"
noise = "0.7.0"
nom = "7.1.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
pad = "0.1.6"
rayon = "1.5.1"
rustc-hash = "1.1.0"
serde = {version="1.0.131", features = ["derive"]}
serde_json = "1.0.73"

